# CensusForge

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: census.ipynb  query.ipynb
src/CensusForge/: CensusForge.py  __init__.py  utils.py
src/census_api/: __init__.py  census_api.py  database.db  utils.py
src/data/: data_pull.py
